--- a/template.html
+++ b/template.html
@@ -14,6 +14,9 @@
     <div id="text">正在加载内容……</div>
     <textarea id="textarea" class="hidden"></textarea>
 
+
+    <footer>beta 0.5.1</footer>
+
     
     <script src="https://code.jquery.com/jquery-3.6.2.min.js"
         integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
