markdown support; some ugly solution to concurrence bug

--- a/template.html
+++ b/template.html
@@ -15,11 +15,12 @@
     <textarea id="textarea" class="hidden"></textarea>
 
 
-    <footer>beta 0.5.2</footer>
+    <footer>beta 0.6</footer>
 
     
     <script src="https://code.jquery.com/jquery-3.6.2.min.js"
         integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
+    <script src="/static/remarkable.min.js"></script>
     <script src="/static/client.js"></script>
 </body>
 
