--- a/template.html
+++ b/template.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <a href="javascript:;" onclick="edit()" id="edit">编辑</a>
-    <a href="javascript:;" onclick="submit()" id="submit" class="hidden">提交</a>
-    <div id="text">正在加载内容……</div>
-    <textarea id="textarea" class="hidden"></textarea>
+    <div class="container">
+        <a href="javascript:;" onclick="edit()" id="edit">编辑</a>
+        <a href="javascript:;" onclick="submit()" id="submit" class="hidden">提交</a>
+        <div id="text">正在加载内容……</div>
+        <textarea id="textarea" class="hidden"></textarea>
+        <footer>beta 0.6.7</footer>
+    </div>
 
 
-    <footer>beta 0.6.5</footer>
-
-    
     <script src="https://code.jquery.com/jquery-3.6.2.min.js"
         integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
-    <script src="/static/remarkable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/2.0.1/remarkable.min.js"></script>
     <script src="/static/client.js"></script>
 </body>
 
