--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TextBoard</title>
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="shortcut icon" href="/static/textboard-icon.svg">
+    <link rel="shortcut icon" href="/static/textboard-icon-new.svg">
 </head>
 
 <body>
