--- a/beta.html
+++ b/beta.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="outer">
-        <div class="container" id="inner">
+        <article class="container" id="inner">
             <header>
                 <button type="button" onclick="edit()" id="edit">编辑</button>
                 <button type="button" onclick="submit()" id="submit" class="hidden">提交</button>
@@ -28,7 +28,7 @@
                 <h6>Textboard beta version. Beta client. CSS by <a href="https://picocss.com">Pico</a>.</h6>
             </footer>
 
-        </div>
+        </article>
     </div>
 
 
