--- a/beta.html
+++ b/beta.html
@@ -13,14 +13,14 @@
 
 <body>
     <div id="outer">
-        <article class="container" id="inner">
+        <main class="container" id="inner">
             <header>
                 <button type="button" onclick="edit()" id="edit">编辑</button>
                 <button type="button" onclick="submit()" id="submit" class="hidden">提交</button>
             </header>
             <hr>
 
-            <div id="text">正在加载内容……</div>
+            <article id="text">正在加载内容……</article>
             <textarea id="textarea" class="hidden"></textarea>
 
             <hr>
@@ -28,7 +28,7 @@
                 <h6>Textboard beta version. Beta client. CSS by <a href="https://picocss.com">Pico</a>.</h6>
             </footer>
 
-        </article>
+        </main>
     </div>
 
 
