--- a/beta.html
+++ b/beta.html
@@ -20,9 +20,10 @@
             </header>
             <hr>
 
-            <article id="text">正在加载内容……</article>
-            <textarea id="textarea" class="hidden"></textarea>
-
+            <article id="text-container">
+                <div id="text">正在加载内容……</div>
+                <textarea id="textarea" class="hidden"></textarea>
+            </article>
             <hr>
             <footer>
                 <h6>Textboard beta version. Beta client. CSS by <a href="https://picocss.com">Pico</a>.</h6>
