add a button to be used

--- a/beta.html
+++ b/beta.html
@@ -14,9 +14,10 @@
 <body>
     <div id="outer">
         <main class="container" id="inner">
-            <header>
+            <header id="header">
                 <button type="button" onclick="edit()" id="edit">编辑</button>
                 <button type="button" onclick="submit()" id="submit" class="hidden">提交</button>
+                <button id="button-manage" class="secondary">管理</button>
             </header>
             <hr>
 
