--- a/beta.html
+++ b/beta.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel="stylesheet" href="/static/beta.style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <script type="module" src="/static/new.beta.client.js"></script>
 </head>
 
 <body>
     <div id="outer">
         <main class="container" id="inner">
             <header id="header">
-                <button type="button" onclick="edit()" id="edit">编辑</button>
-                <button type="button" onclick="submit()" id="submit" class="hidden">提交</button>
-                <button type="button" onclick="manage()"  id="manage" class="secondary hidden">管理</button>
+                <button type="button" id="edit">编辑</button>
+                <button type="button" id="submit" class="hidden">提交</button>
+                <button type="button" id="manage" class="secondary hidden">管理</button>
             </header>
             <hr>
 
@@ -32,12 +33,6 @@
 
         </main>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
-        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
-    <script type="module" src="/static/beta.client.js"></script>
-    <script type="module" src="/static/misc.js"></script>
 </body>
 
 </html>
