--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TextBoard</title>
-    <link rel="stylesheet" href="/static/style.css">
     <link rel="shortcut icon" href="/static/textboard-icon-new.svg">
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <script type="module" src="/static/client.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <a href="javascript:;" onclick="edit()" id="edit">编辑</a>
-        <a href="javascript:;" onclick="submit()" id="submit" class="hidden">提交</a>
-        <div id="text">正在加载内容……</div>
-        <textarea id="textarea" class="hidden"></textarea>
-        <footer>beta 0.6.8</footer>
+    <div id="outer">
+        <main class="container" id="inner">
+            <header id="header">
+                <button type="button" id="edit">编辑</button>
+                <button type="button" id="submit" class="hidden">提交</button>
+                <button type="button" id="manage" class="secondary hidden">管理</button>
+            </header>
+            <hr>
+
+            <article id="text-container">
+                <div id="text">正在加载内容……</div>
+                <textarea id="textarea" class="hidden"></textarea>
+            </article>
+            <hr>
+            <footer>
+                <h6>Textboard beta version. Beta client. CSS by <a href="https://picocss.com">Pico</a>.</h6>
+            </footer>
+
+        </main>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
-        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/2.0.1/remarkable.min.js"></script>
-    <script src="/static/client.js"></script>
-    <script src="/static/misc.js"></script>
 </body>
 
 </html>
