--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </article>
             <hr>
             <footer>
-                <h6>Textboard beta version. Beta client. CSS by <a href="https://picocss.com">Pico</a>.</h6>
+                <h6>Textboard by <a href="https://hcwiki.netlify.app" target="_blank" rel="noopener">4n0n4me</a>. CSS by <a rel="noopener" href="https://picocss.com" target="_blank" rel="noopener">Pico</a>.</h6>
             </footer>
 
         </main>
